[Password Manager] Replace WebInputElement.setValue(element, true /* send events*/) with WebInputElement.setAutofillValue

Sometimes sites doesn't recognize that the password manager changed field values. setAutofillValue sends more events than setValue.

This CL (https://codereview.chromium.org/1955963002/) makes migration for autofill code.

BUG=676267, 501614

Review-Url: https://codereview.chromium.org/2750323003
Cr-Commit-Position: refs/heads/master@{#458459}

Former-commit-id: 4a42d386112ff65fe17baa0c633e5ccc44989aa5